fix table for overflow on headers

--- a/app/css/sass.scss
+++ b/app/css/sass.scss
@@ -435,6 +435,8 @@ input.player-input {
 
 #stats-table .cell.row-title{
     color: $row-title-color;
+    overflow: hidden;
+    text-overflow: ellipsis;
 }
 
 #stats-table .stat-row.is-selected .cell.row-title{
